[package]
name = "expresso"
version = "0.1.0"
authors = ["Andreas Neukoetter <andreas@omni-mad.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name="expresso"
path="src/expresso_main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
