[package]
name = "expresso"
version = "0.2.4"
authors = ["Andreas Neukoetter <andreas@omni-mad.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"
description = "A very basic expression parser, and runner. For educational use only."
readme = "README.md"
homepage = "https://github.com/AndreasOM/expresso"
repository = "https://github.com/AndreasOM/expresso"
keywords = ["parser", "expression"]
categories = ["compilers","parser-implementations"]

[[bin]]
name="expresso"
path="src/expresso_main.rs"

[dependencies]
anyhow = "1.0.38"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
